--- a/docker-compose.bio1.yaml
+++ b/docker-compose.bio1.yaml
@@ -24,6 +24,13 @@ services:
       args:
         - SERVER_PATH=${GAME_SERVER_PATH}
         - RUN_FILE_PATH=${GAME_RUN_FILE_PATH}
+    environment:
+      - SERVER_IP=${SERVER_IP}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - JAVA_DB_PARAMS=${JAVA_DB_PARAMS}
+      - DB_DATABASE=${DB_DATABASE}
     ports:
       - "${LOBBY_SERVER_PATH}:${LOBBY_SERVER_PATH}"
       - "${GAME_SERVER_PORT}:${GAME_SERVER_PORT}"
@@ -40,6 +47,11 @@ services:
       args:
         - DNAS_SRC=${DNAS_SRC}
         - DNAS_DEST=${DNAS_DEST}
+    environment:
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_DATABASE=${DB_DATABASE}
     depends_on:
       - biomysql
       - bioserver
