--- a/.env.bio1.example
+++ b/.env.bio1.example
@@ -1,3 +1,5 @@
+APP_NAME=biohazard1-server
+
 SERVER_IP=
 
 #Database connection
@@ -8,3 +10,14 @@ DB_HOST=bio1mysql
 
 #Game server
 JAVA_DB_PARAMS="&autoReconnect=true&useSSL=false"
+
+#Build args
+DNAS_SRC=./bioserv1/www
+DNAS_DEST=/var/www/dnas/00000002
+
+FPM_HOST=bio1fpm
+
+LOBBY_SERVER_PORT=8300
+GAME_SERVER_PATH=./bioserv2/bioserver
+GAME_RUN_FILE_PATH=./bioserv2/run_file2.sh
+GAME_SERVER_PORT=8690
