--- a/.env.bio2.example
+++ b/.env.bio2.example
@@ -1,3 +1,5 @@
+APP_NAME=biohazard2-server
+
 SERVER_IP=
 
 #Database connection
@@ -8,3 +10,14 @@ DB_HOST=bio2mysql
 
 #Game server
 JAVA_DB_PARAMS="&autoReconnect=true&useSSL=false"
+
+#Build args
+DNAS_SRC=./bioserv2/www
+DNAS_DEST=/var/www/dnas/00000010
+
+FPM_HOST=bio2fpm
+
+LOBBY_SERVER_PORT=8200
+GAME_SERVER_PATH=./bioserv2/bioserver
+GAME_RUN_FILE_PATH=./bioserv2/run_file2.sh
+GAME_SERVER_PORT=8590
